force-app/main/default/objects/skuid__Page_Version__c/skuid__Page_Version__c.object-meta.xml
<CustomObject>
    <label>Page Revision</label>
    <nameField>
        <displayFormat>PV-{0000}-{YY}-{MM}-{DD}</displayFormat>
        <label>Revision Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Revisions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>