force-app/main/default/objects/skuid__Page_Version__c/fields/skuid__Description__c.field-meta.xml
<CustomField>
    <fullName>skuid__Description__c</fullName>
    <description>A description of a non-auto-saved Page Revision</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>