force-app/main/default/objects/skuid__Page_Version__c/fields/skuid__IsAutoSave__c.field-meta.xml
<CustomField>
    <fullName>skuid__IsAutoSave__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this Page Revision saved automatically by Skuid (as opposed to manually by a user)?</description>
    <label>Is Auto Save</label>
    <type>Checkbox</type>
</CustomField>