force-app/main/default/objects/skuid__Page_Version__c/fields/skuid__Page__c.field-meta.xml
<CustomField>
    <fullName>skuid__Page__c</fullName>
    <label>Page</label>
    <referenceTo>skuid__Page__c</referenceTo>
    <relationshipLabel>Page Revisions</relationshipLabel>
    <relationshipName>Page_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>